// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FoodList renders empty food list 1`] = `
<div
  className="content"
>
  <ul
    className="food-list"
  >
    <li
      className="food-list-item"
    >
      No foods found
    </li>
  </ul>
</div>
`;

exports[`FoodList renders error indicator 1`] = `
<div
  className="content"
>
  <ul
    className="food-list"
  >
    <li
      className="food-list-item error"
    >
      some error
    </li>
  </ul>
</div>
`;

exports[`FoodList renders foods 1`] = `
<div
  className="content"
>
  <ul
    className="food-list"
  >
    <li
      className="food-list-item low"
    >
      Asparagus, raw
       - 
      4.90
      mg - 
      1/2 cup
    </li>
    <li
      className="food-list-item very-high"
    >
      beetroot, steamed
       - 
      50.00
      mg - 
      just under 1/2 cup
    </li>
    <li
      className="food-list-item high"
    >
      carrots, steamed
       - 
      15.00
      mg - 
      1/2 cup
    </li>
    <li
      className="food-list-item moderate"
    >
      tomato, raw, sliced
       - 
      5.00
      mg - 
      1/2 cup
    </li>
  </ul>
</div>
`;

exports[`FoodList renders loading indicator 1`] = `
<div
  className="content"
>
  <ul
    className="food-list"
  >
    <li
      className="food-list-item"
    >
      Loading foods...
    </li>
  </ul>
</div>
`;

exports[`FoodList renders new food form 1`] = `
<div
  className="content"
>
  <ul
    className="food-list"
  >
    <form
      className="add-food"
      onSubmit={[Function]}
    >
      <label
        htmlFor="name"
      >
        New food name
      </label>
      <input
        autoFocus={true}
        name="name"
        onChange={[Function]}
        type="text"
        value=""
      />
      <label
        htmlFor="oxalateMg"
      >
        Oxalates per serving (mg)
      </label>
      <input
        name="oxalateMg"
        onChange={[Function]}
        step="any"
        type="number"
        value={0}
      />
      <label
        htmlFor="serving"
      >
        Serving
      </label>
      <input
        name="serving"
        onChange={[Function]}
        type="text"
        value=""
      />
      <input
        type="submit"
        value="Add"
      />
    </form>
  </ul>
</div>
`;
